# PistolPostgres

./: Cargo.toml  PistolPostgres.md.txt  README.md  docker-compose.yml  pistol.toml
.github/workflows/: ci.yml
demo/: schema.sql
docker/: Dockerfile
docs/: DESIGN.md
migrations/: 0001_catalog.sql  0002_hardening.sql  0003_workload_capture.sql
scripts/: demo.sh
src/: apply.rs  cli.rs  config.rs  db.rs  demo.rs  engine.rs  evaluator.rs  genome.rs  lib.rs  main.rs  measure.rs  policy.rs  reconcile.rs  telemetry.rs
src/catalog/: mod.rs
src/proposer/: evolutionary.rs  llm.rs  mod.rs
tests/: integration.rs  property.rs
